# archlinux-script-installer

./: .gitignore  CLAUDE.md  README.md  TODO  after_install.sh  common_functions.sh  example  installer.sh  intel  last_step.sh  libvirt_subvol.sh  mec  mec2  optional pkg.txt
.scripts/: after-install-2.sh  (+8 more)
new/: INTEGRATION-COMPLETE.md  MANIFEST.in  README-v2.md  README.md  pyproject.toml
new/archinstall/: user_configuration.json
new/config/: disk-example.json  disk-preserve-existing.json  disk-simple-ext4.json  example.json  install-megamix.json  test-config-with-disks.json
new/dasik/: __init__.py  __main__.py
new/dasik/lib/actions/: __init__.py  abstract_action.py  action_context.py  action_executor.py  action_registry.py  actions_handler.py  actions_handler_v2.py  base_install_action.py  bluetooth_action.py  cups_action.py  disk_partition_action.py  drop_files_action.py  firewall_action.py  hw_accel_action.py  kernel_cmdline_action.py  kvm_action.py  mkinitcpio_action.py  ms_fonts_action.py  network_action.py  packages_action.py  pacman_action.py  systemd_action.py  timezone_action.py  trim_action.py  users_action.py  wireguard_action.py
new/dasik/lib/command_worker/: command_worker.py
new/dasik/lib/exceptions/: exceptions.py
new/dasik/lib/json_parser/: json_parser.py
new/docs/: ARCHITECTURE-DIAGRAM.md  DISK-PARTITIONING-EXPLAINED.md  DISK-PARTITIONING-FIX.md  HOW-TO-TEST.md  IDEMPOTENT-ARCHITECTURE.md  MIGRATION-GUIDE.md  RESUMEN-MEJORAS.md  SUMMARY-DISK-SYSTEM.md  disk-partitioning.md
new/examples/: disk_partitioning_example.py  idempotent_demo.py
(+50 files in other folders)
