[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasik"
version = "0.1.0"
description = "Arch Linux installation and configuration tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andres", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "colorama",
    "pydantic"
]

[project.scripts]
dasik = "dasik.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dasik*"]
exclude = ["tests*"]
